# EpigCorpus

./: .gitattributes  .gitignore  EpigCorpus.ipynb  README.md  epigcorpus.sh  main.py  pyproject.toml
data/: README.md
src/: edcs_cleaner.py  edcs_interactive_map.py  edcs_scraper.py  edcs_scraper_all_attributes.py  edcs_streamlit_map.py  roman_viator_interactive.py  roman_viator_map.py
