[project]
name = "edcs-analytics"
version = "0.1.0"
description = "Incremental EDCS scraper with checkpoint resume and JSON/TSV exports"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "geopandas>=1.1.1",
    "matplotlib>=3.10.7",
    "pandas>=3.0.1",
    "folium>=0.17.0",
    "requests>=2.33.0",
    "streamlit>=1.45.0",
]
